--- a/Match-App/templates/Profile/profile.html.twig
+++ b/Match-App/templates/Profile/profile.html.twig
@@ -12,6 +12,7 @@
             <th>Orientation</th>
             <th>Bio</th>
             <th>Birthdate</th>
+            <th>Picture</th>
         </tr>
      
             <tr>
@@ -21,6 +22,7 @@
                 <td>{{ user.orientation }}</td>
                 <td>{{ user.bio }}</td>
                 <td>{{ user.birthdate|date('Y-m-d') }}</td>
+                <td>{{user.picture}}</td>
             </tr>
       
     </table>
