Correction du modèle User et mise à jour des fichiers associés

--- a/Match-App/templates/registration/registration.html.twig
+++ b/Match-App/templates/registration/registration.html.twig
@@ -26,6 +26,7 @@
             {{ form_row(form.gender) }}
             {{ form_row(form.orientation) }}
             {{ form_row(form.bio) }}
+            {{form_row(form.picture)}}
             {{ form_row(form.save) }}
         {{ form_end(form) }}
         <button type="submit"><a href="{{ path('login') }}">Se connecter</a></button>
