finish matching alghorithme

--- a/Match-App/templates/inou.html.twig
+++ b/Match-App/templates/inou.html.twig
@@ -25,8 +25,8 @@
 
     <script>
         const questions = [
-            { title: "1. Quelle est votre orientation sexuelle ?", choices: ['Hétérosexuel', 'Homosexuel', 'Lesbienne', 'Pansexuel', 'Asexuel', 'Bisexuel', 'Autre'] },
-            { title: "2. Avez-vous une préférence pour les relations amicales ou amoureuses ?", choices: ['Amicales', 'Amoureuses', 'Les deux'] },
+            { title: "1. Quelle est votre orientation sexuelle ?", choices: ['Hétérosexuel', 'Homosexuel', 'Asexuel', 'Bisexuel', 'Autre'] },
+            { title: "2. Que voulez vous obtenir de cette plateforme ?", choices: ['construire des relations amicales', 'trouver le grand amour', 'Les deux'] },
             { title: "3. Quel est votre lieu de vacances idéal ?", choices: ['Plage', 'Montagne', 'Ville', 'Campagne'] },
             { title: "4. Quel est votre passe-temps préféré ?", choices: ['Sortir avec des amis', 'Lire ou regarder des films/séries', 'Faire du sport', 'Voyager'] },
             { title: "5. Quelles sont vos aspirations professionnelles ?", choices: ['Travailler dans la tech', 'Devenir entrepreneur', 'Travailler dans les arts', 'Autre'] },
